--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Heyyyyyyy</title>
+    <title>Hi</title>
 
     <style>
       #screen
       {
-        background-color: yellow;
+        background-color: teal;
         height: 100vh;
         width: 100vw;
       }
@@ -20,31 +20,15 @@
         text-align: center;
         margin-top: 40vh;
         font-size: 90px;
-      }
-
-      .word-1
-      {
-        text-transform: uppercase;
-        color: rgb(74, 144, 226);
+        color: purple;
         font-family: Helvetica, sans-serif;
-      }
-
-      .word-2
-      {
-        color: #BC1919;
-        font-family: Avenir, sans-serif;
       }
     </style>
   </head>
 
   <body id="screen">
     <h1>
-      <span class="word-1">hello</span>
-      <span class="word-2">world</span>!
+      Hello world!
     </h1>
-
-    <script>
-      console.log("Dummy text Lorum ipsem")
-    </script>
   </body>
 </html>
